added some code for gccf gckey and interac suppport
